# -data-engineering-task

./: .gitignore  Dockerfile  Justfile  README.md  pyproject.toml
de_solution/: main.py
de_solution/exceptions/: custom_exceptions.py
de_solution/middlewares/: logging_middleware.py
de_solution/models/: models.py
de_solution/services/: data_translation.py
tests/routes/: test_data_translation.py
tests/services/: test_data_translation.py
