[project]
name = "de-solution"
version = "0.1.0"
description = "Data Engineering Task - Solution"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Kamil Kleina", email = "recruitment@kleina.org" }]
requires-python = "==3.13.2"
dependencies = [
    "fastapi[standard]==0.115.12",
    "loguru==0.7.3",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = ["httpx>=0.28.1", "pre-commit>=4.2.0", "pytest>=8.3.5", "ruff==0.11.2"]
